30 Days of Python

--- a/Day_11/Functions_Assignment.ipynb
+++ b/Day_11/Functions_Assignment.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of 3 and 5 is 8\n"
+     ]
+    }
+   ],
    "source": [
     "def add_two_numbers(a,b):\n",
     "  sum = a + b\n",
@@ -42,9 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of a circle of radius 7cm is 153.93804002589985 cm2\n"
+     ]
+    }
+   ],
    "source": [
     "def area_of_circle(r):\n",
     "  import math\n",
@@ -63,9 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of 2,3 and 5 is 10\n"
+     ]
+    }
+   ],
    "source": [
     "def add_all_nums(*x):\n",
     "  sum = 0\n",
@@ -87,9 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32 degrees celsius is 89.6 in Fahrenheits\n"
+     ]
+    }
+   ],
    "source": [
     "def convert_celsius_to_fahrenheit(x):\n",
     "  F = x * (9/5) + 32\n",
@@ -106,9 +138,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "March is in:  Spring\n"
+     ]
+    }
+   ],
    "source": [
     "def check_season(month):\n",
     "  if month in ['September','October','November']:\n",
@@ -133,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,15 +190,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The solution set of x2 - 6x + 9 (3.0, 3.0)\n"
+     ]
+    }
+   ],
    "source": [
     "def solve_quadratic_eqn(a,b,c):\n",
     "  x1 = (-b + (b**2 - 4 *a*c)**2)/ (2*a)\n",
     "  x2 = (-b - (b**2 - 4 *a*c)**2)/ (2*a)\n",
     "  return x1,x2\n",
-    "print(f'The solution set of x2 - 6x + 9 is {solve_quadratic_eqn(1,-6,9)}')"
+    "print(f'The solution set of x2 - 6x + 9 {solve_quadratic_eqn(1,-6,9)}')"
    ]
   },
   {
@@ -170,9 +218,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adam\n",
+      "Abbas\n",
+      "Abba\n"
+     ]
+    }
+   ],
    "source": [
     "def print_list(y):\n",
     "  for i in y:\n",
@@ -196,9 +254,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def reverse_list(list):\n",
     "  rev_list = []\n",
@@ -206,8 +275,7 @@
     "    rev_list.append(list[i])\n",
     "  return(rev_list)\n",
     "\n",
-    "reverse_list([1,2,3,4,5])\n",
-    "reverse_list([C,B,A])"
+    "reverse_list([1,2,3,4,5])\n"
    ]
   },
   {
@@ -219,9 +287,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AREWA', 'DATA', 'SCIENCE', 'FELLOWSHIP']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def capitalize_list_items(list):\n",
     "  cap_list = []\n",
@@ -249,11 +328,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "food_stuff = ['Potato', 'Tomato', 'Mango', 'Milk'];"
+    "food_stuff = ['Potato', 'Tomato', 'Mango', 'Milk']"
    ]
   },
   {
@@ -265,11 +344,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Add_item' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\My Learning\\ArewaDS-30days-of-Python\\ArewaDS-30days-of-Python\\Day_11\\Functions_Assignment.ipynb Cell 27\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_11/Functions_Assignment.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m Add_item(food_stuff, \u001b[39m'\u001b[39m\u001b[39mMeat\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Add_item' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "print(add_item(food_stuff, 'Meat'))"
+    "Add_item(food_stuff, 'Meat')"
    ]
   },
   {
@@ -281,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,8 +881,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "KHALIPHA.venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
