--- a/Day_2/Variables.ipynb
+++ b/Day_2/Variables.ipynb
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -738,8 +738,8 @@
     }
    ],
    "source": [
-    "circum_of_circle = math.pi * 2 * 30\n",
-    "print(circum_of_circle)"
+    "circumference_of_circle = math.pi * 2 * 30\n",
+    "print(circumference_of_circle)"
    ]
   },
   {
@@ -751,25 +751,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32md:\\My Learning\\ArewaDS-30days-of-Python\\ArewaDS-30days-of-Python\\Day_2\\Variables.ipynb Cell 62\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#Y110sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m r \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mRadius of the circle: \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#Y110sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m area \u001b[39m=\u001b[39m math\u001b[39m.\u001b[39mpi \u001b[39m*\u001b[39m (\u001b[39mint\u001b[39;49m(r) \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m \u001b[39m2\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#Y110sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(area)\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius 2.0 is: 12.566370614359172\n"
      ]
     }
    ],
    "source": [
-    "r = input(\"Radius of the circle: \")\n",
-    "area = math.pi * (int(r) ** 2)\n",
-    "print(area)"
+    "import math\n",
+    "radius = float(input(\"Enter the radius of the circle: \"))\n",
+    "area = math.pi * radius**2\n",
+    "print(f\"The area of the circle with radius {radius} is: {area}\")"
    ]
   },
   {
@@ -781,16 +778,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_name = input('Enter your first name:')\n",
-    "last_name = input('Enter your last name:')\n",
-    "country = input('Enter your country:')\n",
-    "age = input('Enter your age:')\n",
-    "\n",
-    "print(area_of_circle)"
+    "first_name = input('Enter your first name:')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "last_name = input('Enter your last name:')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country = input('Enter your country:')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = input('Enter your age:')"
    ]
   },
   {
@@ -802,23 +821,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'keywords' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\My Learning\\ArewaDS-30days-of-Python\\ArewaDS-30days-of-Python\\Day_2\\Variables.ipynb Cell 66\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#Y114sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(keywords)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'keywords' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Here is a list of the Python keywords.  Enter any keyword to get more help.\n",
+      "\n",
+      "False               class               from                or\n",
+      "None                continue            global              pass\n",
+      "True                def                 if                  raise\n",
+      "and                 del                 import              return\n",
+      "as                  elif                in                  try\n",
+      "assert              else                is                  while\n",
+      "async               except              lambda              with\n",
+      "await               finally             nonlocal            yield\n",
+      "break               for                 not                 \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(keywords)"
+    "help('keywords')"
    ]
   }
  ],
