--- a/Day_4/Strings_Assignment.ipynb
+++ b/Day_4/Strings_Assignment.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,24 +183,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (3427253713.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    company.capitalize()\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coding for all Coding For All cODING fOR aLL\n"
      ]
     }
    ],
    "source": [
     "print(\n",
-    "    company.capitalize()\n",
-    "    company.title()\n",
+    "    company.capitalize(),\n",
+    "    company.title(),\n",
     "    company.swapcase()\n",
-    "    )"
+    ")"
    ]
   },
   {
@@ -212,9 +211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coding\n"
+     ]
+    }
+   ],
    "source": [
     "print(company[0:6])"
    ]
@@ -228,9 +235,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using .index():  0\n",
+      "Using .rindex():  0\n",
+      "Using .find():  0\n"
+     ]
+    }
+   ],
    "source": [
     "print('Using .index(): ', company.index('Coding')) \n",
     "print('Using .rindex(): ', company.rindex('Coding')) \n",
@@ -246,9 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python for all\n",
+      "Python For All\n"
+     ]
+    }
+   ],
    "source": [
     "print('Coding for all'.replace('Coding','Python'))\n",
     "print(company.replace('Coding','Python'))"
@@ -263,9 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python for all\n"
+     ]
+    }
+   ],
    "source": [
     "print('Python for everyone'.replace('everyone','all'))"
    ]
@@ -279,9 +313,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Coding', 'For', 'All']\n"
+     ]
+    }
+   ],
    "source": [
     "print('Coding For All'.split())"
    ]
@@ -295,9 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Facebook', ' Google', ' Microsoft', ' Apple', ' IBM', ' Oracle', ' Amazon']\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Facebook, Google, Microsoft, Apple, IBM, Oracle, Amazon\".split(','))"
    ]
@@ -311,9 +361,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C\n",
+      "C\n"
+     ]
+    }
+   ],
    "source": [
     "print('Coding For All'[0])\n",
     "print(company[0])"
@@ -328,9 +387,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l\n",
+      "l\n"
+     ]
+    }
+   ],
    "source": [
     "print('Coding For All'[-1])\n",
     "print(company[-1])"
@@ -345,9 +413,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n"
+     ]
+    }
+   ],
    "source": [
     "print(company[10])"
    ]
@@ -361,9 +437,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P.F.E."
+     ]
+    }
+   ],
    "source": [
     "sentence = 'Python For Everyone'\n",
     "word = sentence.split()\n",
@@ -381,9 +465,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accronym:  P.F.E.\n"
+     ]
+    }
+   ],
    "source": [
     "sentence = 'Python For Everyone'\n",
     "word = sentence.split()\n",
@@ -405,9 +497,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "print(cfa.index('C'))"
    ]
@@ -421,9 +521,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "print(cfa.index('F'))"
    ]
@@ -437,9 +545,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
    "source": [
     "print('Coding For All People'.rfind('l'))"
    ]
@@ -453,9 +569,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
     "print(sentence.find('because'))"
    ]
@@ -469,9 +593,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
     "print(sentence.rfind('because'))"
    ]
@@ -485,9 +617,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(sentence[31:47 + len('because')])"
    ]
@@ -501,9 +641,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(sentence[31:47 + len('because')])"
    ]
@@ -517,9 +665,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(cfa.startswith('Coding'))"
    ]
@@ -533,9 +689,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(cfa.endswith('coding'))"
    ]
@@ -549,9 +713,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Coding For All\n"
+     ]
+    }
+   ],
    "source": [
     "string = '   Coding For All      ' \n",
     "print(string.rstrip())"
@@ -573,9 +745,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30DaysOfPython:  False\n"
+     ]
+    }
+   ],
    "source": [
     "print('30DaysOfPython: ','30DaysOfPython'.isidentifier()) "
    ]
@@ -589,9 +769,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thirty_days_of_python:  True\n"
+     ]
+    }
+   ],
    "source": [
     "print('thirty_days_of_python: ','thirty_days_of_python'.isidentifier())"
    ]
@@ -605,9 +793,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Django# Flask# Bottle# Pyramid# Falcon\n"
+     ]
+    }
+   ],
    "source": [
     "print('# '.join(['Django', 'Flask', 'Bottle', 'Pyramid', 'Falcon']))"
    ]
@@ -623,9 +819,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am enjoying this challenge.\n",
+      "I just wonder what is next.\n"
+     ]
+    }
+   ],
    "source": [
     "print('I am enjoying this challenge.\\nI just wonder what is next.')"
    ]
@@ -641,9 +846,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name\tAge\tCountry\tCity\n",
+      "Asabeneh\t250\tFinland\tHelsinki\n"
+     ]
+    }
+   ],
    "source": [
     "print('Name\\tAge\\tCountry\\tCity')\n",
     "print('Asabeneh\\t250\\tFinland\\tHelsinki')"
@@ -661,9 +875,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of a circle with radius 10 is 314 meters square.\n"
+     ]
+    }
+   ],
    "source": [
     "radius = 10\n",
     "area = 3.14 * radius ** 2\n",
@@ -686,9 +908,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 + 6 = 14\n",
+      "8 - 6 = 2\n",
+      "8 * 6 = 48\n",
+      "8 / 6 = 1.3333333333333333\n",
+      "8 % 6 = 2\n",
+      "8 // 6 = 1\n",
+      "8 ** 6 = 262144\n"
+     ]
+    }
+   ],
    "source": [
     "a = 8\n",
     "b = 6\n",
