--- a/Day_12/Modules_Assignment.ipynb
+++ b/Day_12/Modules_Assignment.ipynb
@@ -23,10 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " id: EF0lUp\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import string\n",
+    "def random_user_id():\n",
+    "    return \"\".join(str(random.choice(string.ascii_letters + string.digits)) for i in range(6))\n",
+    "\n",
+    "print(f' id: {random_user_id()}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -37,10 +52,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['FFNNx2TSGy', 'WL1lUAayPE']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def random_user_id_gen_by_user():\n",
+    "    a = int(input(\"Enter the number of characters: \"))\n",
+    "    b = int(input(\"Enter the number of IDs: \"))\n",
+    "    return [\"\".join(str(random.choice(string.ascii_letters + string.digits)) for i in range(a)) for j in range(b)]\n",
+    "\n",
+    "random_user_id_gen_by_user()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,10 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rgb(240,16,107)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rgb_color_gen():\n",
+    "    a = ','.join(str(random.randint(0,255)) for i in range(3))\n",
+    "    return 'rgb('+ a + ')'\n",
+    "\n",
+    "print(rgb_color_gen())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +119,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['#80b16a', '#0e759d', '#4af195', '#b78e04', '#84d53d', '#5191ba']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def list_of_hexa_colors(x):\n",
+    "     a= [\"\".join(str(random.choice('abcdef' + string.digits)) for i in range(6)) for j in range(x)]\n",
+    "     b =['#' + item for item in a]\n",
+    "     return b\n",
+    "list_of_hexa_colors(6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,10 +150,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['rgb(43,67,156)',\n",
+       " 'rgb(102,249,43)',\n",
+       " 'rgb(221,159,92)',\n",
+       " 'rgb(93,48,84)',\n",
+       " 'rgb(44,120,54)',\n",
+       " 'rgb(13,62,68)',\n",
+       " 'rgb(226,166,80)']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def list_of_rgb_colors(x):\n",
+    "    return [rgb_color_gen() for i in range(x)]\n",
+    "\n",
+    "list_of_rgb_colors(7)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,10 +186,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#b82dbe', '#2a49ee', '#b87f17', '#587f19']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_colors(fun,x):\n",
+    "    if fun == 'hexa':\n",
+    "        result = list_of_hexa_colors(x)\n",
+    "    elif fun == 'rgb':\n",
+    "        result = list_of_rgb_colors(x)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "print(generate_colors('hexa',4))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,10 +226,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 1, 2, 4, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def shuffle_list(list):\n",
+    "    random.shuffle(list)\n",
+    "    return list\n",
+    "print(shuffle_list([1,2,3,4,5]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,14 +252,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 3, 0, 7, 9, 1, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def unique_random_nums():\n",
+    "    return random.sample([0,1,2,3,4,5,6,7,8,9],k=7)\n",
+    "\n",
+    "print(unique_random_nums())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "KHALIPHA.venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
