--- a/Day_13/List_Comprehension_Assignment.ipynb
+++ b/Day_13/List_Comprehension_Assignment.ipynb
@@ -16,9 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-5, -4, -3, -2, -1, 0]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numbers = [-5,-4,-3,-2,-1,0,2,3,4,5]\n",
     "[number for number in numbers if number <=0]"
@@ -28,29 +39,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Flatten the following list of lists of lists to a one dimensional list :"
+    "### 2. Flatten the following list of lists of lists to a one dimensional list :\n",
+    "list_of_lists =[[[1, 2, 3]], [[4, 5, 6]], [[7, 8, 9]]]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The flattened list b (computed stepwise): [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "The flattened list c (computed direct): [1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_lists = [[[1,2,3]],[[4,5,6]],[[7,8,9]]]\n",
+    "\n",
+    "a = [number for row in list_of_lists for number in row]\n",
+    "b = [number for row in a for number in row]\n",
+    "\n",
+    "c = [number for row in list_of_lists for list in row for number in list]\n",
+    "print(f'The flattened list b (computed stepwise): {b}')\n",
+    "print(f'The flattened list c (computed direct): {c}')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Using list comprehension create the following list of tuples:"
+    "### 3. Using list comprehension create the following list of tuples:\n",
+    "\n",
+    "[(0, 1, 0, 0, 0, 0, 0),\n",
+    "\n",
+    "(1, 1, 1, 1, 1, 1, 1),\n",
+    "\n",
+    "(2, 1, 2, 4, 8, 16, 32),\n",
+    "\n",
+    "(3, 1, 3, 9, 27, 81, 243),\n",
+    "\n",
+    "(4, 1, 4, 16, 64, 256, 1024),\n",
+    "\n",
+    "(5, 1, 5, 25, 125, 625, 3125),\n",
+    "\n",
+    "(6, 1, 6, 36, 216, 1296, 7776),\n",
+    "\n",
+    "(7, 1, 7, 49, 343, 2401, 16807),\n",
+    "\n",
+    "(8, 1, 8, 64, 512, 4096, 32768),\n",
+    "\n",
+    "(9, 1, 9, 81, 729, 6561, 59049),\n",
+    "\n",
+    "(10, 1, 10, 100, 1000, 10000, 100000)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 1, 0, 0, 0, 0, 0),\n",
+       " (1, 1, 1, 1, 1, 1, 1),\n",
+       " (2, 1, 2, 4, 8, 16, 32),\n",
+       " (3, 1, 3, 9, 27, 81, 243),\n",
+       " (4, 1, 4, 16, 64, 256, 1024),\n",
+       " (5, 1, 5, 25, 125, 625, 3125),\n",
+       " (6, 1, 6, 36, 216, 1296, 7776),\n",
+       " (7, 1, 7, 49, 343, 2401, 16807),\n",
+       " (8, 1, 8, 64, 512, 4096, 32768),\n",
+       " (9, 1, 9, 81, 729, 6561, 59049),\n",
+       " (10, 1, 10, 100, 1000, 10000, 100000)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(i**1,i**0,i**1,i**2,i**3,i**4,i**5) for i in range(11)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,39 +135,113 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "countries = [[('Finland', 'Helsinki')], [('Sweden', 'Stockholm')], [('Norway', 'Oslo')]]\n",
+    "\n",
+    "output:\n",
+    "\n",
+    "[['FINLAND','FIN', 'HELSINKI'], ['SWEDEN', 'SWE', 'STOCKHOLM'], ['NORWAY', 'NOR', 'OSLO']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['FINLAND', 'FIN', 'HELSINKI'],\n",
+       " ['SWEDEN', 'SWE', 'STOCKHOLM'],\n",
+       " ['NORWAY', 'NOR', 'OSLO']]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countries = [[('Finland', 'Helsinki')], [('Sweden', 'Stockholm')], [('Norway', 'Oslo')]]\n",
+    "\n",
+    "[[tpl[0].upper(),tpl[0][:3].upper(), tpl[1].upper()] for row in countries for tpl in row]"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Change the following list to a list of dictionaries:"
+    "### 5. Change the following list to a list of dictionaries:\n",
+    "\n",
+    "countries = [[('Finland', 'Helsinki')], [('Sweden', 'Stockholm')], [('Norway', 'Oslo')]]\n",
+    "\n",
+    "output:\n",
+    "\n",
+    "[{'country': 'FINLAND', 'city': 'HELSINKI'},\n",
+    "\n",
+    "{'country': 'SWEDEN', 'city': 'STOCKHOLM'},\n",
+    "\n",
+    "{'country': 'NORWAY', 'city': 'OSLO'}]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'country': 'Finland', 'city': 'Helsinki'},\n",
+       " {'country': 'Sweden', 'city': 'Stockholm'},\n",
+       " {'country': 'Norway', 'city': 'Oslo'}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countries = [[('Finland', 'Helsinki')], [('Sweden', 'Stockholm')], [('Norway', 'Oslo')]]\n",
+    "[{'country':tpl[0],'city':tpl[1]} for row in countries for tpl in row]"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Change the following list of lists to a list of concatenated strings:"
+    "### 6. Change the following list of lists to a list of concatenated strings:\n",
+    "\n",
+    "names = [[('Asabeneh', 'Yetayeh')], [('David', 'Smith')], [('Donald', 'Trump')], [('Bill', 'Gates')]]\n",
+    "\n",
+    "output\n",
+    "\n",
+    "['Asabeneh Yetaeyeh', 'David Smith', 'Donald Trump', 'Bill Gates']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Asabeneh Yetayeh', 'David Smith', 'Donald Trump', 'Bill Gates']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names = [[('Asabeneh', 'Yetayeh')], [('David', 'Smith')], [('Donald', 'Trump')], [('Bill', 'Gates')]]\n",
+    "[(name[0] + \" \" + name[1]) for row in names for name in row]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,16 +251,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    " y = m * x + c\n",
+    "\n",
+    " chose y-intercept"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_Intercept = lambda m,c,x:c \n",
+    "Y_Intercept(2,4,2)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "KHALIPHA.venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
