--- a/Day_3/Operators_Assignment.ipynb
+++ b/Day_3/Operators_Assignment.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "My_age = 28"
+    "My_age = 24"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Height = 1.76"
+    "Height = 1.80"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Complex_num = 1 + 7j"
+    "Complex_num = 1 + 2j"
    ]
   },
   {
@@ -75,14 +75,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32md:\\My Learning\\ArewaDS-30days-of-Python\\ArewaDS-30days-of-Python\\Day_3\\Operators_Assignment.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_3/Operators_Assignment.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m b \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mEnter base:\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_3/Operators_Assignment.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m h \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m(\u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnter height:\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_3/Operators_Assignment.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m area \u001b[39m=\u001b[39m \u001b[39m0.5\u001b[39m \u001b[39m*\u001b[39m b \u001b[39m*\u001b[39m h \n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the triangle is:  4.0\n"
      ]
     }
    ],
@@ -102,9 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The perimeter of the triangle is:  6.0\n"
+     ]
+    }
+   ],
    "source": [
     "a = float(input(\"Enter side a: \"))\n",
     "b = float(input(\"Enter side b: \"))\n",
@@ -122,9 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the rectangle is  200.0  square meters\n"
+     ]
+    }
+   ],
    "source": [
     "length = float(input(\"Enter length of rectangle: \"))\n",
     "breadth = float(input(\"Enter breadth of rectangle: \"))\n",
@@ -148,9 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle is:  1963.4954084936207  and  the perimeter is :  157.07963267948966\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "r = float(input(\"Input the radius of the circle: \"))\n",
@@ -168,9 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The x-intercept of y = 2x-2 is:  0.0  and  the y-intercept is:  -2\n"
+     ]
+    }
+   ],
    "source": [
     "y = 2 * 0 - 2\n",
     "x = ( 2 * 0 ) / 2\n",
@@ -186,9 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slope is:  2.0 and the Euclidean distance is: 8.94427190999916\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "x1,y1,x2,y2 = 2,2,6,10\n",
@@ -207,9 +243,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Equal:  False Unequal:  True\n"
+     ]
+    }
+   ],
    "source": [
     "m0 = 2\n",
     "m = 4\n",
@@ -225,9 +269,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Greater than:  False Less than:  True\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Greater than: \", m0 > m, \"Less than: \", m0 < m)"
    ]
@@ -241,9 +293,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value of y:  2809\n"
+     ]
+    }
+   ],
    "source": [
     "x = int(input(\"Value of x: \"))\n",
     "y = x ** 2 + 6 * x + 9\n",
@@ -259,9 +319,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of python:  6 length of dragon:  6\n",
+      "falsy:  False\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Length of python: \", len('python'), \"length of dragon: \", len('dragon'))\n",
     "print(\"falsy: \", len('python')> len('dragon'))"
@@ -276,9 +345,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Checking for 'on': \" 'on' in ('python' and 'dragon'))"
    ]
@@ -292,9 +369,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jargon in sentence:  True\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"jargon in sentence: \", 'jargon' in 'I hope this course is not full of jargon')"
    ]
@@ -308,9 +393,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is no 'on' in both dragon and python:  False\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"There is no 'on' in both dragon and python: \", 'on' not in ('dragon' and 'python'))"
    ]
@@ -324,9 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 1.0 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "Length = len('python')\n",
     "float = float(a)\n",
@@ -343,9 +444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is even:  False\n"
+     ]
+    }
+   ],
    "source": [
     "even = 5\n",
     "print(\"x is even: \", even%2==0)"
@@ -360,9 +469,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking:  False\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Checking: \", 7 // 3 == 2.7)"
    ]
@@ -376,9 +493,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cheking again!:  False\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Cheking again!: \", type('10')== type(10))"
    ]
@@ -392,11 +517,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking yet again:  False\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Checking yet again: \", int('9.8') == 10)"
+    "print(\"Checking yet again: \", ('9.8') == 10)\n"
    ]
   },
   {
@@ -408,14 +541,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hours = (input(\"Enter hours per week: \"))\n",
+    "rate_per_hour = (input(\"Enter rate per hour: \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Hours = float(input(\"Enter hours per week:\"))\n",
-    "Person = float(input(\"Enter rate per hour: \"))\n",
-    "pay_per_person = Hours * Person\n",
-    "print(\"Your weekly earning is: \", pay_per_person)"
+    "pay_per_person = hours * rate_per_hour\n",
+    "\n",
+    "print(\"Your weekly earning is: \", Pay_per_personay_per_person)"
    ]
   },
   {
@@ -427,9 +569,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have lived for  756864000  seconds.\n"
+     ]
+    }
+   ],
    "source": [
     "years = int(input(\"Enter the number of years you have lived: \"))\n",
     "seconds = years * 365 * 24 * 60 * 60\n",
@@ -441,18 +591,34 @@
    "metadata": {},
    "source": [
     "### 23. Write a Python script that displays the following table:\n",
-    "### 1 1 1 1 1\n",
-    "### 2 1 2 4 8\n",
-    "### 3 1 3 9 27\n",
-    "### 4 1 4 16 64\n",
-    "### 5 1 5 25 125"
+    "1 1 1 1 1\n",
+    "\n",
+    "2 1 2 4 8\n",
+    "\n",
+    "3 1 3 9 27\n",
+    "\n",
+    "4 1 4 16 64\n",
+    "\n",
+    "5 1 5 25 125"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 1 1 1 \n",
+      "2 1 2 4 8 \n",
+      "3 1 3 9 27 \n",
+      "4 1 4 16 64 \n",
+      "5 1 5 25 125 \n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1,6):\n",
     "    line = ''\n",
