30 Days of Python

--- a/Day_017/Exception_Handling_Assignment.ipynb
+++ b/Day_017/Exception_Handling_Assignment.ipynb
@@ -21,7 +21,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "names = ['Finland', 'Sweden', 'Norway','Denmark','Iceland', 'Estonia','Russia']\n",
+    "*nordic_countries,es,ru = names\n",
+    "print(f'The Nordic countries include: {nordic_countries} ')\n",
+    "print(f'es: {es}, ru: {ru}')"
+   ]
   }
  ],
  "metadata": {
