--- a/Day_018/Regular_Expression_Assignment.ipynb
+++ b/Day_018/Regular_Expression_Assignment.ipynb
@@ -18,7 +18,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. What is the most frequent word in the following paragraph?"
+    "### 1. What is the most frequent word in the following paragraph?\n",
+    "paragraph = 'I love teaching. If you do not love teaching what else can you love. I love Python if you do not love something which can give you all the capabilities to develop an application what else can you love.\n",
+    "\n",
+    "    [\n",
+    "    (6, 'love'),\n",
+    "    (5, 'you'),\n",
+    "    (3, 'can'),\n",
+    "    (2, 'what'),\n",
+    "    (2, 'teaching'),\n",
+    "    (2, 'not'),\n",
+    "    (2, 'else'),\n",
+    "    (2, 'do'),\n",
+    "    (2, 'I'),\n",
+    "    (1, 'which'),\n",
+    "    (1, 'to'),\n",
+    "    (1, 'the'),\n",
+    "    (1, 'something'),\n",
+    "    (1, 'if'),\n",
+    "    (1, 'give'),\n",
+    "    (1, 'develop'),\n",
+    "    (1, 'capabilities'),\n",
+    "    (1, 'application'),\n",
+    "    (1, 'an'),\n",
+    "    (1, 'all'),\n",
+    "    (1, 'Python'),\n",
+    "    (1, 'If')\n",
+    "    ]"
    ]
   },
   {
